<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 Carmen Alvarez
 
  This file is part of Scrum Chatter.
 
  Scrum Chatter is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.
 
  Scrum Chatter is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU General Public License
  along with Scrum Chatter. If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">Scrum Chatter</string>
    <string name="app_version">1.0.17</string>
    <string name="title_section_meetings">Meetings</string>
    <string name="title_section_team">Team</string>
    <string name="action_share">Share</string>
    <string name="action_team">Teams</string>
    <string name="action_team_switch">Switch teams</string>
    <string name="action_team_rename">Rename team</string>
    <string name="action_team_rename_name">Rename %s</string>
    <string name="action_team_delete">Delete team</string>
    <string name="action_team_delete_name">Delete %s</string>
    <string name="action_import">Import database</string>
    <string name="action_new_member">Add team member</string>
    <string name="action_new_meeting">New meeting</string>
    <string name="action_new_team">New team</string>
    <string name="hint_new_member">Team member\'s name.</string>
    <string name="error_member_exists">%s is already a team member.</string>
    <string name="error_team_exists">You already have the %s team.</string>
    <string name="error_sharing_meeting">Sorry! Could not share this meeting.</string>
    <string name="action_delete_member">Delete member</string>
    <string name="action_delete_meeting">Delete meeting</string>
    <string name="dialog_message_delete_member_confirm">Delete %s?</string>
    <string name="dialog_message_delete_meeting_confirm">Delete meeting from %s?</string>
    <string name="dialog_message_delete_team_confirm">Delete %s?</string>
    <string name="dialog_message_switch_team">Choose a team</string>
    <string name="hint_team_name">Team name</string>
    <string name="dialog_error_one_team_required">Sorry, you need at least one team!</string>
    <string name="dialog_error_title_one_member_required">Can\'t start meeting</string>
    <string name="dialog_error_message_one_member_required">Sorry, you need at least one team member to have a meeting.</string>
    <string name="new_team">New team&#8230;</string>
    <string name="member_list_header_name">Name</string>
    <string name="member_list_header_avg_duration">Average Time</string>
    <string name="member_list_header_sum_duration">Total Time</string>
    <string name="meeting_list_header_date">Date</string>
    <string name="meeting_list_header_duration">Duration</string>
    <string name="action_stop_meeting">Stop meeting</string>
    <string name="action_start">Start</string>
    <string name="chatter_face_label">Chatter face</string>
    <string name="meeting_header_total_duration">Meeting duration:</string>
    <string name="meeting_state_not_started">Not started</string>
    <string name="meeting_state_in_progress">In progress</string>
    <string name="meeting_state_finished">Finished</string>
    <string name="export_choice_title">Choose the format to share</string>
    <string name="export_format_excel">Excel</string>
    <string name="export_format_db">Database</string>
    <string name="export_meeting_date">Scrum Chatter meeting on %s</string>
    <string name="export_meeting_duration">Total meeting duration: %s</string>
    <string name="export_header_meeting_date">Date</string>
    <string name="export_header_meeting_duration">Total duration</string>
    <string name="export_message_subject">Scrum Chatter report</string>
    <string name="export_message_body">The Scrum Chatter report is attached.</string>
    <string name="export_error">Could not create Scrum Chatter report.  Make sure your phone\'s SD card is available.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="empty_list_meetings">You have not created any meetings.</string>
    <string name="empty_list_members">You have no team members.</string>
    <string name="progress_dialog_message">Please wait&#8230;</string>
    <string name="dialog_confirm">Are you sure?</string>
    <string name="import_confirm_title">Import database</string>
    <string name="import_confirm_message">Delete the current database and replace with %s?</string>
    <string name="import_result_success">Import successful</string>
    <string name="import_result_failed">Import failed</string>
    <string name="import_result_no_file">No file selected for import</string>
    <string name="import_result_file_does_not_exist">%s does not exist. Cannot import.</string>
    <string name="about">About</string>
    <string name="about_author">By Carmen Alvarez</string>
    <string name="about_version">v</string>
    <string name="about_source_text">Source code on GitHub:</string>
    <string name="about_source_link">https://github.com/caarmen/scrumchatter</string>
    <string name="about_credit_title">Special thanks to:</string>
    <string name="about_credit_content_provider_generator_text">BoD for the chatter emoticon and his content provider generator.</string>
    <string name="about_credit_content_provider_generator_link">https://github.com/BoD/android-contentprovider-generator</string>
    <string name="about_credit_actionbar_style_generator_text">Jeff Gilfelt for his action bar style generator.</string>
    <string name="about_credit_actionbar_style_generator_link">http://jgilfelt.github.io/android-actionbarstylegenerator/</string>
    <string name="about_credit_holo_style_generator_text">Jérôme Van Der Linden for his holo style generator.</string>
    <string name="about_credit_holo_style_generator_link">http://android-holo-colors.com/</string>
    <string name="about_credit_app_icon_text">qubodup for the speech bubble icon on openclipart.</string>
    <string name="about_credit_app_icon_link">http://openclipart.org/detail/14322/16x16px-capable-black-and-white-icons-by-qubodup-14322</string>
    
    <string name="drawer_open">Open side menu</string>
    <string name="drawer_close">Close side menu</string>

</resources>
